--- a/O1/Latex/Relazione.tex
+++ b/O1/Latex/Relazione.tex
@@ -11,6 +11,8 @@
 \usepackage{siunitx}
 \usepackage[font=small]{caption}
 \usepackage[bookmarks, hidelinks]{hyperref}
+\usepackage{float}
+%\usepackage{sidecap}
 
 \begin{document}
 
