--- a/O1/Latex/introduzione.tex
+++ b/O1/Latex/introduzione.tex
@@ -3,3 +3,4 @@
 Gli obiettivi di questa esperienza di laboratorio sono ricavare il fuoco di due lenti (una convergente e una divergente),
 misurare gli effetti di aberrazione cromatica e aberrazione sferica e il valore dell'indice di rifrazione della lente convergente. 
 
+% i sarebbe anche da dire il fattore di magnificazione
