--- a/O1/Latex/Relazione.tex
+++ b/O1/Latex/Relazione.tex
@@ -12,6 +12,7 @@
 \usepackage[font=small]{caption}
 \usepackage[bookmarks, hidelinks]{hyperref}
 \usepackage{float}
+\usepackage{wrapfig}
 %\usepackage{sidecap}
 
 \begin{document}
