--- a/O1/Latex/tabella_ab_crom.tex
+++ b/O1/Latex/tabella_ab_crom.tex
@@ -2,15 +2,15 @@
 \begin{table}[H]
     \centering
     \small
-    \begin{tabular}{c | c c c}
-%        \toprule
-		filtro & $p$ & $q$ & $f$ \\
+    \begin{tabular}{l c c c}
+        \toprule
+		Filtro & $p \; [\si{\centi\metre}]$ & $q \; [\si{\centi\metre}]$ & $f \; [\si{\centi\metre}]$ \\
         \midrule
-		blu & p$_b$ & q$_b$ & f$_b$ \\
-		rosso & p$_r$ & q$_r$ & f$_r$ \\
+		Blu & p$_b$ & q$_b$ & f$_b$ \\
+		Rosso & p$_r$ & q$_r$ & f$_r$ \\
         \bottomrule
     \end{tabular}
-    \caption{voglio il sidecap, damnit!}
-    \label{tab:ab_crom}
+    %\caption{voglio il sidecap, damnit!}
+    %\label{tab:ab_crom}
 \end{table}
 %\end{SCfigure}
