--- a/O1/Latex/tabella_ab_sf.tex
+++ b/O1/Latex/tabella_ab_sf.tex
@@ -2,15 +2,13 @@
 \begin{table}[H]
     \centering
     \small
-    \begin{tabular}{c | c c c}
-%        \toprule
-		diaframma & $p$ & $q$ & $f$ \\
+    \begin{tabular}{l c c c}
+        \toprule
+        Diaframma & $p \; [\si{\centi\metre}]$ & $q \; [\si{\centi\metre}]$ & $f \; [\si{\centi\metre}]$ \\
         \midrule
-		foro centrale & p$_b$ & q$_b$ & f$_b$ \\
-		anello periferico & p$_r$ & q$_r$ & f$_r$ \\
+		Foro centrale & p$_b$ & q$_b$ & f$_b$ \\
+		Anello periferico & p$_r$ & q$_r$ & f$_r$ \\
         \bottomrule
     \end{tabular}
-    \caption{voglio il sidecap, damnit!}
-    \label{tab:ab_sf}
 \end{table}
 %\end{SCfigure}
