--- a/O1/Latex/tabella_div.tex
+++ b/O1/Latex/tabella_div.tex
@@ -3,13 +3,14 @@
     \small
     \begin{tabular}{c c c c c c c c}
         \toprule
-        $p_d$ & $x$ & $D$ & $q_c$ & $f_d$ & $m$\ped{ind} & $m$\ped{dir} & $h$\ped{imm} \\
+        $p_d \; [\si{\centi\metre}]$ & $x \; [\si{\centi\metre}]$ & $D \; [\si{\centi\metre}]$ &
+        $q_c \; [\si{\centi\metre}] $ & $f_d \; [\si{\centi\metre}]$ & $h\ped{imm} \; [\si{\centi\metre}]$ & $m$\ped{h} & $m$\ped{pq} \\
         \midrule
-		30.50 $\pm$ 0.05 & -12 $\pm$ 2 & 23.10 $\pm$ 0.05 & 76.00 $\pm$ 0.05 & -20 $\pm$ 6 & 0.9 $\pm$ 0.2 & 0.87 $\pm$ 0.01 & 0.79 $\pm$ 0.01 \\
-		30.50 $\pm$ 0.05 & -12 $\pm$ 2 & 25.20 $\pm$ 0.05 & 67.10 $\pm$ 0.05 & -20 $\pm$ 7 & 0.7 $\pm$ 0.2 & 0.71 $\pm$ 0.01 & 0.64 $\pm$ 0.01 \\
-		30.50 $\pm$ 0.05 & -12 $\pm$ 3 & 27.20 $\pm$ 0.05 & 61.60 $\pm$ 0.05 & -20 $\pm$ 8 & 0.6 $\pm$ 0.1 & 0.61 $\pm$ 0.01 & 0.55 $\pm$ 0.01 \\
+		30.50 $\pm$ 0.05 & -12 $\pm$ 2 & 23.10 $\pm$ 0.05 & 76.00 $\pm$ 0.05 & -20 $\pm$ 6 & 0.79 $\pm$ 0.01 & 0.87 $\pm$ 0.01 & 0.9 $\pm$ 0.2 \\
+		30.50 $\pm$ 0.05 & -12 $\pm$ 2 & 25.20 $\pm$ 0.05 & 67.10 $\pm$ 0.05 & -20 $\pm$ 7 & 0.64 $\pm$ 0.01 & 0.71 $\pm$ 0.01 & 0.7 $\pm$ 0.2 \\
+		30.50 $\pm$ 0.05 & -12 $\pm$ 3 & 27.20 $\pm$ 0.05 & 61.60 $\pm$ 0.05 & -20 $\pm$ 8 & 0.55 $\pm$ 0.01 & 0.61 $\pm$ 0.01 & 0.6 $\pm$ 0.1 \\
         \bottomrule
     \end{tabular}
-    \caption{Commento.}
+    \caption{Dati relativi alla lente divergente.}
     \label{tab:div}
 \end{table}
