--- a/O1/Latex/Procedimento.tex
+++ b/O1/Latex/Procedimento.tex
@@ -84,7 +84,7 @@ Come si può osservare dai dati nella Tabella \ref{tab:conv} i due valori della 
 
 Ogni lente è soggetta a un difetto, detto aberrazione cromatica, dovuto al fatto che l'indice di rifrazione del vetro della lente varia al variare della lunghezza d'onda della luce incidente.
 Per valutare e osservare il fenomeno dell'aberrazione cromatica, abbiamo misurato i fuochi della lente convergente per la luce monocromatica rossa e per la luce blu, utilizzando la relazione (\ref{eq:coniugati}).
-Per ottenere luce monocromatica abbiamo posto un filtro semitrasparente colorato di fronte alla sorgente luminosa. I valori $p$ e $q$ sono stati presi seguendo lo stesso procedimento adottato per la lente convergente, salvo il fatto che è stato preso solo un valore ciascuno dei due parametri.
+Per ottenere luce monocromatica abbiamo posto un filtro semitrasparente colorato di fronte alla sorgente luminosa. I valori $p$ e $q$ sono stati presi seguendo lo stesso procedimento adottato per la lente convergente, salvo il fatto che è stato preso solo un valore per ciascuno dei due parametri.
 
 Rosso e blu sono stati scelti per massimizzare la differenza tra i fuochi e facilitare le misure; essi si trovano infatti agli estremi opposti dell'intervallo di lunghezze d'onda della luce visibile e quindi i fuochi sono il più distante possibile tra di loro. Inoltre abbiamo mantenuto $p \simeq q$ per facilitare la misura. Infatti la misura risulta più difficile se $p < q$, come implica la legge dei punti coniugati (\ref{eq:coniugati}), a causa dell'effetto di profondità di campo, e se $p > q$ poiché la distanza tra i fuochi è molto piccola.
 I risultati da noi ottenuti sono riportati nella tabella sottostante:
@@ -153,7 +153,7 @@ ottenendo i valori di $x$ e $f\ped{d}$. Inoltre per ottenere un valore più accu
 
 Infine anche per questo sistema di lenti abbiamo calcolato il valore della magnificazione nei due modi possibili, cioè indirettamente con i valori $p\ped{d}$, $x$, $D$ e $q\ped{c}$
 \begin{equation}
-    m\ped{pq} \,=\, m_1 \cdot m_2 \,=\, \frac{p_d}{x} \cdot \frac{q_c}{D+x}
+    m\ped{pq} \,=\, m_1 \cdot m_2 \,=\, \frac{x}{p_d} \cdot \frac{q_c}{D+x}
 \end{equation} %	|m| \,=\, \frac{x}{p\ped{d}} \,=\,
 dove $x$ non è altro che il valore di $q\ped{d}$ e direttamente con i valori di $h$\ped{imm}
 \begin{equation}
