--- a/O1/Latex/tabella_conv.tex
+++ b/O1/Latex/tabella_conv.tex
@@ -9,21 +9,37 @@
         $p \; [\si{\centi\metre}]$ & $q \; [\si{\centi\metre}]$ & $f \; [\si{\centi\metre}]$ &
         $h\ped{imm} \; [\si{\centi\metre}]$ & $m\ped{h}$ & $m\ped{pq}$ \\
         \midrule
-        28.8 $\pm$ 0.05 & 149.35 $\pm$ 0.05 & 24 $\pm$ 1 & 4.59 $\pm$ 0.01 & 5.100 $\pm$ 0.002  & 5.19 $\pm$ 0.01 \\
-		30.8 $\pm$ 0.05 & 111.75 $\pm$ 0.05 & 24 $\pm$ 1 & 3.22 $\pm$ 0.01 & 3.583 $\pm$ 0.00 & 3.628 $\pm$ 0.0063 \\
-		32.8 $\pm$ 0.05 & 91.85 $\pm$ 0.05 & 24 $\pm$ 1 & 2.49 $\pm$ 0.01 & 2.767 $\pm$ 0.004& 2.800 $\pm$ 0.005  \\
-		34.9 $\pm$ 0.05 & 77.60 $\pm$ 0.05 & 24 $\pm$ 1 & 1.85 $\pm$ 0.01 & 2.056 $\pm$ 0.005& 2.223 $\pm$ 0.003  \\
-		36.9 $\pm$ 0.05 & 69.60 $\pm$ 0.05 & 24 $\pm$ 1 & 1.69 $\pm$ 0.01 & 1.878 $\pm$ 0.006& 1.886 $\pm$ 0.003  \\
-		38.8 $\pm$ 0.05 & 63.00 $\pm$ 0.05 & 24 $\pm$ 1 & 1.44 $\pm$ 0.01 & 1.600 $\pm$ 0.007& 1.624 $\pm$ 0.002  \\
-		40.8 $\pm$ 0.05 & 58.50 $\pm$ 0.05 & 24 $\pm$ 1 & 1.28 $\pm$ 0.01 & 1.422 $\pm$ 0.008& 1.434 $\pm$ 0.002  \\
-		42.8 $\pm$ 0.05 & 54.90 $\pm$ 0.05 & 24 $\pm$ 1	& 1.13 $\pm$ 0.01 & 1.26 $\pm$ 0.01  & 1.283 $\pm$ 0.002  \\
-		44.8 $\pm$ 0.05 & 51.70 $\pm$ 0.05 & 24 $\pm$ 1 & 0.99 $\pm$ 0.01 & 1.10 $\pm$ 0.01  & 1.154 $\pm$ 0.002  \\
-		46.9 $\pm$ 0.05 & 49.20 $\pm$ 0.05 & 24 $\pm$ 1 & 0.91 $\pm$ 0.01 & 1.02 $\pm$ 0.01  & 1.049 $\pm$ 0.002  \\
-		48.9 $\pm$ 0.05 & 47.40 $\pm$ 0.05 & 24 $\pm$ 1 & 0.85 $\pm$ 0.01 & 0.94 $\pm$ 0.01  & 0.969 $\pm$ 0.001  \\
-		50.9 $\pm$ 0.05 & 45.40 $\pm$ 0.05 & 23 $\pm$ 1 & 0.78 $\pm$ 0.01 & 0.87 $\pm$ 0.01  & 0.892 $\pm$ 0.001  \\
+        28.8 $\pm$ 0.1 & 149.35 $\pm$ 0.1 & 24 $\pm$ 2 & 4.59 $\pm$ 0.02 & 5.100 $\pm$ 0.004  & 5.19 $\pm$    0.02 \\
+		30.8 $\pm$ 0.1 & 111.75 $\pm$ 0.1 & 24 $\pm$ 2 & 3.22 $\pm$ 0.02 & 3.583 $\pm$ 0.006  & 3.63 $\pm$   0.01  \\
+		32.8 $\pm$ 0.1 & 91.85 $\pm$ 0.1 & 24 $\pm$ 2 & 2.49 $\pm$ 0.02 & 2.767 $\pm$  0.008   & 2.800 $\pm$  0.009 \\
+		34.9 $\pm$ 0.1 & 77.60 $\pm$ 0.1 & 24 $\pm$ 2 & 1.85 $\pm$ 0.02 & 2.06 $\pm$  0.01    & 2.223 $\pm$  0.008 \\
+		36.9 $\pm$ 0.1 & 69.60 $\pm$ 0.1 & 24 $\pm$ 2 & 1.69 $\pm$ 0.02 & 1.88 $\pm$  0.01    & 1.886 $\pm$  0.006 \\
+		38.8 $\pm$ 0.1 & 63.00 $\pm$ 0.1 & 24 $\pm$ 2 & 1.44 $\pm$ 0.02 & 1.60 $\pm$  0.01    & 1.624 $\pm$  0.005 \\
+		40.8 $\pm$ 0.1 & 58.50 $\pm$ 0.1 & 24 $\pm$ 2 & 1.28 $\pm$ 0.02 & 1.42 $\pm$  0.02    & 1.434 $\pm$  0.004 \\
+		42.8 $\pm$ 0.1 & 54.90 $\pm$ 0.1 & 24 $\pm$ 2 & 1.13 $\pm$ 0.02 & 1.26 $\pm$   0.02     & 1.283 $\pm$ 0.004 \\
+		44.8 $\pm$ 0.1 & 51.70 $\pm$ 0.1 & 24 $\pm$ 2 & 0.99 $\pm$ 0.02 & 1.10 $\pm$   0.02     & 1.154 $\pm$ 0.003 \\
+		46.9 $\pm$ 0.1 & 49.20 $\pm$ 0.1 & 24 $\pm$ 2 & 0.91 $\pm$ 0.02 & 1.02 $\pm$   0.02     & 1.049 $\pm$ 0.003 \\
+		48.9 $\pm$ 0.1 & 47.40 $\pm$ 0.1 & 24 $\pm$ 2 & 0.85 $\pm$ 0.02 & 0.94 $\pm$   0.02     & 0.969 $\pm$ 0.003 \\
+		50.9 $\pm$ 0.1 & 45.40 $\pm$ 0.1 & 23 $\pm$ 2 & 0.78 $\pm$ 0.02 & 0.87 $\pm$   0.03     & 0.892 $\pm$ 0.003 \\
         \bottomrule
     \end{tabular}
-    \caption{La tabella riporta i dati misurati e i risultati dei calcoli eseguiti.}
+    \caption{La tabella riporta i dati misurati e i risultati dei calcoli eseguiti. Le misure eseguite col metro
+    hanno un incertezza di un millimetro, mentre quelle col calibro hanno un errore di \SI{0.2}{\milli\metre}. Abbiamo
+    aumentato le incertezze rispetto a quelle di risoluzione, poiché queste ultime non ci sembravano realistiche (soprattutto
+quella del calibro). Gli ingrandimenti $m\ped{h}$ e $m\ped{pq}$ sono riportati in valor assoluto. L'immagine risultava rovesciata.}
     \label{tab:conv}
 \end{table}
 %\end{center}
+
+
+
+
+
+
+
+
+
+
+
+
+
