--- a/O1/Latex/Procedimento.tex
+++ b/O1/Latex/Procedimento.tex
@@ -53,7 +53,7 @@ Una volta ottenuti i valori  di $p$ e $q$, abbiamo calcolato per ognuno il relat
 
 Quindi è stata calcolata la media aritmetica dei valori, con la quale abbiamo ottenuto il seguente valore della focale:
 \begin{equation}
-    f \ped{conv} \,=\, 24 \pm 1 \; \si{\centi\metre}
+    f \ped{conv} \,=\, 24.0 \pm 0.6 \; \si{\centi\metre}
 \end{equation}
 
 Vogliamo inoltre ricavare il valore della magnificazione per ogni coppia $p$ e $q$.
@@ -77,8 +77,17 @@ Infine per avere una verifica della correttezza dei dati registrati, abbiamo mes
 %vediamo quanto occupano dai... intanto io li ho messi BUZZ X FRAPA
 % PS: forse sarebbe meglio invertire le colonne h_imm e m_1 BUZZ X FRAPA
 
-Come si può osservare dai dati nella Tabella \ref{tab:conv} i due valori della magnificazione ricavati con entrambi i procedimenti non risultano compatibili entro i propri errori solo nei casi in cui è stato necessario.
+Come si può osservare dai dati nella Tabella \ref{tab:conv}, i due valori della magnificazione ricavati con i diversi procedimenti
+non sono sempre compatibili. In molti casi essi sono compatibili entro un sigma, mentre in altri casi sono anche molto lontani. Questo
+è probabilmente imputabile alle misure di fuoco, piuttosto che alle misure di dimensione dell'immagine.
 % X BUZZ: metti a posto anche il commento qui quando hai fatto la tabella.
+
+\begin{figure}[H]
+    \centering
+	\includegraphics[width=16cm]{grafico_convergente.png}
+    \caption{Il grafico mostra la relazione $1/q = - 1/p + 1/f$, che risulta correttamente lineare.}
+    \label{fig:graph}
+\end{figure}
 
 \subsection{Aberrazione cromatica della lente convergente}
 
@@ -90,7 +99,7 @@ Rosso e blu sono stati scelti per massimizzare la differenza tra i fuochi e faci
 I risultati da noi ottenuti sono riportati nella tabella sottostante:
 \input{tabella_ab_crom.tex}
 
-Come si può notare dai dati della tabella i valori per il fuoco della lente convergente sono differenti a seconda della lunghezza d'onda (colore) dei raggi luminosi incidenti.
+I fuochi per i due colori risultano compatibili perché l'incertezza è troppo alta per riuscire a distinguere la differenza. Tuttavia, nonostante il valore di $p$ sia costante, $q$ varia, e pure di molto (forse anche troppo, è probabile che una delle misure sia errata), il che ci porta a concludere che siamo riusciti a notare l'effetto dell'aberrazione sferica.
 
 \subsection{Aberrazione sferica della lente convergente}
 
@@ -106,19 +115,19 @@ I risultati sono riportati nella tabella sottostante:
 
 \input{tabella_ab_sf.tex}
 
-Come si può notare per il fascio di luce divergente il valore della focale della lente risulta essere minore rispetto al valore ottenuto per i raggi centrali.
+Anche in questo caso l'incertezza sul fuoco non ci permette di distinguere la differenza. Tuttavia, come nel caso precendente il valore $q$ varia e possiamo concludere che abbiamo notato l'effetto dell'aberrazione sferica.
 
-\subsection{Fuoco della lente divergente}
-
-Dal momento che per una lente divergente l'immagine che si ottiene è un immagine virtuale e non reale, ovvero l'immagine non si forma per intersezione dei raggi reali, ma per il loro prolungamento, risulta impossibile mettere a fuoco l'immagine e quindi misurare direttamente il valore di $q$ usando solamente la lente divergente.
-Per risolvere il problema abbiamo usato una lente convergente per proiettare l'immagine virtuale su uno schermo (vedi Figura \ref{fig:div}).
-
-\begin{figure}[b!]
+\begin{figure}[h!]
 	\includegraphics[width=16cm]{drawing2.pdf}
     \caption{Schema della disposizione delle lenti per la misura della focale della lente divergente. È riportata l'immagine
     virtuale della lente divergente e l'immagine finale sullo schermo.}
     \label{fig:div}
 \end{figure}
+
+\subsection{Fuoco della lente divergente}
+
+Dal momento che per una lente divergente l'immagine che si ottiene è un immagine virtuale e non reale, ovvero l'immagine non si forma per intersezione dei raggi reali, ma per il loro prolungamento, risulta impossibile mettere a fuoco l'immagine e quindi misurare direttamente il valore di $q$ usando solamente la lente divergente.
+Per risolvere il problema abbiamo usato una lente convergente per proiettare l'immagine virtuale su uno schermo (vedi Figura \ref{fig:div}).
 
 %questa non è la figura con le freccette in fondo alla pagina? [STESSA FIGURA PRECEDENTE CON AGGIUNTA LA LENTE DIVERGENTE TRA LA SORGENTE E LA LENTE DIVERGENTE]
 % PS che diamine state dicendo? lente Div, tra lente Div e sorgente? quante lenti Div abbiamo? LOL
@@ -131,7 +140,7 @@ Specifichiamo da subito la notazione che abbiamo usato (si usi la Figura \ref{fi
 	\item{$x = $ distanza incognita tra il centro della lente divergente e la sua immagine virtuale;}
 \end{itemize}
 
-Il sistema di lenti realizzato funziona nel seguente modo: la lente divergente produce un'mmagine virtuale tra la sorgente e se stessa. Qusta immagine diventa quindi il nuovo oggetto per la lente convergente che produce un immagine reale sullo schermo. Quindi potendo misurare tutti i parametri sopraelencati ad eccezione di $x$ e $f\ped{d}$ (focale lente divergente) e conoscendo $f\ped{c}$ (focale lente convergente) si può risolvere il seguente sistema
+Il sistema di lenti realizzato funziona nel seguente modo: la lente divergente produce un'mmagine virtuale tra la sorgente e se stessa. Qusta immagine diventa quindi il nuovo oggetto per la lente convergente che produce un immagine reale sullo schermo. Quindi potendo misurare tutti i parametri sopraelencati ad eccezione di $x$ e $f\ped{d}$ (focale lente divergente) e conoscendo $f\ped{c}$ (focale lente convergente) si può risolvere il seguente sistema, dato dalla combinazione delle leggi dei punti coniugati per le due lenti:
 
 %\begin{equation}
 %	\frac{1}{f\ped{d}} \,=\, \frac{1}{p\ped{d}} + \frac{1}{x}
@@ -145,15 +154,15 @@ Il sistema di lenti realizzato funziona nel seguente modo: la lente divergente p
   \end{aligned}
 \right.
 \end{equation}
-%
-ottenendo i valori di $x$ e $f\ped{d}$. Inoltre per ottenere un valore più accurato di $f\ped{d}$, abbiamo eseguito tre misure tenendo ferma la distanza $p\ped{d}$ e variando $D$ e $q\ped{c}$. Quindi per ogni set di misure abbiamo sfruttato la legge dei punti coniugati (\ref{eq:coniugati}) e abbiamo ottenuto tre valori di $f\ped{d}$. Facendone la media si ottiene un valore più accurato di $f\ped{d}$. I risultati sono i seguenti (Il segno negativo indica che l'immagine virtuale ed il fuoco si trovano sul lato sinistro della lente come vista in Figura \ref{fig:div}. Chiaramente esiste anche un altro fuoco dal lato opposto):
+
+In questo modo si ottengono i valori di $x$ e $f\ped{d}$. Inoltre per ottenere un valore più accurato di $f\ped{d}$, abbiamo eseguito tre misure tenendo ferma la distanza $p\ped{d}$ e variando $D$ e $q\ped{c}$. Quindi per ogni set di misure abbiamo sfruttato la legge dei punti coniugati (\ref{eq:coniugati}) e abbiamo ottenuto tre valori di $f\ped{d}$. Facendone la media si ottiene un valore più accurato di $f\ped{d}$. I risultati sono i seguenti (Il segno negativo indica che l'immagine virtuale ed il fuoco si trovano sul lato sinistro della lente come vista in Figura \ref{fig:div}. Chiaramente esiste anche un altro fuoco dal lato opposto):
 \begin{equation}
 	x \,=\, (-12 \pm 2) \;\si{\centi\metre} \qquad \qquad f\ped{d} \,=\, (-20 \pm 7) \;\si{\centi\metre}
 \end{equation}
 
 Infine anche per questo sistema di lenti abbiamo calcolato il valore della magnificazione nei due modi possibili, cioè indirettamente con i valori $p\ped{d}$, $x$, $D$ e $q\ped{c}$
 \begin{equation}
-    m\ped{pq} \,=\, m_1 \cdot m_2 \,=\, \frac{p_d}{x} \cdot \frac{q_c}{D+x}
+    m\ped{pq} \,=\, m_1 \cdot m_2 \,=\, \frac{x}{p_d} \cdot \frac{q_c}{D+x}
 \end{equation} %	|m| \,=\, \frac{x}{p\ped{d}} \,=\,
 dove $x$ non è altro che il valore di $q\ped{d}$ e direttamente con i valori di $h$\ped{imm}
 \begin{equation}
@@ -178,13 +187,14 @@ Per ricavare il valore dell'indice di rifrazione $n$ della lente convergente non
 \frac{1}{f} \,=\, (n-1)\left(\frac{1}{R\ped{1}}-\frac{1}{R\ped{2}}\right) \,=\, \frac{2(n-1)}{R}
 	\label{eq:costruttore}
 \end{equation}
-dove $f$ è la focale della lente convergente, $R_1$ e $R_2$ sono i raggi delle facce sferiche della lente. La nostra lente era simmetrica per cui $|R_1| = |R_2| \equiv R$ per cui vale la seconda uguaglianza.
-
+%
 \begin{wrapfigure}{r}{20mm}
   \begin{center}
     \includegraphics{lente.pdf}
   \end{center}
 \end{wrapfigure}
+%
+dove $f$ è la focale della lente convergente, $R_1$ e $R_2$ sono i raggi delle facce sferiche della lente. La nostra lente era simmetrica per cui $|R_1| = |R_2| \equiv R$ per cui vale la seconda uguaglianza.
 
 Per ottenere il raggio $R$ della lente abbiamo misurato col calibro il diametro della lente, il suo spessore al centro e quello al bordo. Con questi dati ricavare il raggio è un problema di geometria elementare. Tuttavia la nostra lente presentava uno smusso (in figura a lato una sezione), per cui non era chiaro il valore dello spessore al bordo. Abbiamo registrato i valori di spessore al bordo sia includendo lo smusso che non misurandolo. Sono stati ricavati due valori di raggio e dell'indice di rifrazione, in un caso è stata eliminata solo la parte grigio chiaro (senza smusso) mentre nell'altro anche quella grigio scuro (con smusso). I valori ottenuto sono:
 
@@ -193,7 +203,7 @@ Per ottenere il raggio $R$ della lente abbiamo misurato col calibro il diametro 
     \small
     \begin{tabular}{l c c}
         \toprule
-        Smusso & $R [\si{\centi\metre}]$ & $n$ \\
+        Smusso & $R \; [\si{\centi\metre}]$ & $n$ \\
         \midrule
 		Con smusso & $29 \pm 5$ & $1.6 \pm 0.1$  \\
 		Senza smusso & $16 \pm 2$ & $1.3 \pm 0.1$ \\
