--- a/O1/Latex/tabella_ab_crom.tex
+++ b/O1/Latex/tabella_ab_crom.tex
@@ -6,8 +6,8 @@
         \toprule
 		Filtro & $p \; [\si{\centi\metre}]$ & $q \; [\si{\centi\metre}]$ & $f \; [\si{\centi\metre}]$ \\
         \midrule
-		Blu & p$_b$ & q$_b$ & f$_b$ \\
-		Rosso & p$_r$ & q$_r$ & f$_r$ \\
+		Blu & $49.1 \pm 0.1 $ & $46.3 \pm 0.1$ & $24 \pm 2$ \\
+		Rosso & $49.1 \pm 0.1$ & $47.4 \pm 0.1$ & $24 \pm 2$ \\
         \bottomrule
     \end{tabular}
     %\caption{voglio il sidecap, damnit!}
