--- a/O1/Latex/tabella_div.tex
+++ b/O1/Latex/tabella_div.tex
@@ -3,14 +3,15 @@
     \small
     \begin{tabular}{c c c c c c c c}
         \toprule
-        $p_d \; [\si{\centi\metre}]$ & $x \; [\si{\centi\metre}]$ & $D \; [\si{\centi\metre}]$ &
-        $q_c \; [\si{\centi\metre}] $ & $f_d \; [\si{\centi\metre}]$ & $h\ped{imm} \; [\si{\centi\metre}]$ & $m$\ped{h} & $m$\ped{pq} \\
+        $p_d \; [\si{\centi\metre}]$ & $D \; [\si{\centi\metre}]$ & $q_c \; [\si{\centi\metre}] $ &
+        $x \; [\si{\centi\metre}]$ & $f_d \; [\si{\centi\metre}]$ & $h\ped{imm} \; [\si{\centi\metre}]$ & $m$\ped{h} & $m$\ped{pq} \\
         \midrule
-		30.50 $\pm$ 0.05 & -12 $\pm$ 2 & 23.10 $\pm$ 0.05 & 76.00 $\pm$ 0.05 & -20 $\pm$ 6 & 0.79 $\pm$ 0.01 & 0.87 $\pm$ 0.01 & 0.9 $\pm$ 0.2 \\
-		30.50 $\pm$ 0.05 & -12 $\pm$ 2 & 25.20 $\pm$ 0.05 & 67.10 $\pm$ 0.05 & -20 $\pm$ 7 & 0.64 $\pm$ 0.01 & 0.71 $\pm$ 0.01 & 0.7 $\pm$ 0.2 \\
-		30.50 $\pm$ 0.05 & -12 $\pm$ 3 & 27.20 $\pm$ 0.05 & 61.60 $\pm$ 0.05 & -20 $\pm$ 8 & 0.55 $\pm$ 0.01 & 0.61 $\pm$ 0.01 & 0.6 $\pm$ 0.1 \\
+		30.5 $\pm$ 0.1 & 23.1 $\pm$ 0.1 & 76.0 $\pm$ 0.1 & -12 $\pm$ 1  & -20 $\pm$ 3 & 0.79 $\pm$ 0.02 & 0.87 $\pm$ 0.02 & 0.9 $\pm$ 0.1 \\
+		30.5 $\pm$ 0.1 & 25.2 $\pm$ 0.1 & 67.1 $\pm$ 0.1 & -12 $\pm$ 1  & -20 $\pm$ 4 & 0.64 $\pm$ 0.02 & 0.71 $\pm$ 0.02 & 0.7 $\pm$ 0.1 \\
+		30.5 $\pm$ 0.1 & 27.2 $\pm$ 0.1 & 61.6 $\pm$ 0.1 & -12 $\pm$ 2  & -20 $\pm$ 4 & 0.55 $\pm$ 0.02 & 0.61 $\pm$ 0.02 & 0.6 $\pm$ 0.1 \\
         \bottomrule
     \end{tabular}
-    \caption{Dati relativi alla lente divergente.}
+    \caption{Dati relativi alla lente divergente. Per quanto riguarda le incertezze, si legga la didascalia della Tabella \ref{tab:conv}.
+    Gli ingrandimenti $m\ped{h}$ e $m\ped{pq}$ sono riportati in valor assoluto. L'immagine risultava rovesciata.}
     \label{tab:div}
 \end{table}
